Optimize PDB load